--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <li><a class="dropdown-item" href="#">Form Laura</a></li>
               <li><a class="dropdown-item" href="#">Form Margarita</a></li>
               <li><a class="dropdown-item" href="#">Form William</a></li>
-              <li><a class="dropdown-item" href="#">Form Yesenia</a></li>
+              <li><a class="dropdown-item" href="./pages/yesenia.html">Form Yesenia</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
