--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <li><a class="dropdown-item" href="#">Form Alex</a></li>
               <li><a class="dropdown-item" href="#">Form Laura</a></li>
               <li><a class="dropdown-item" href="#">Form Margarita</a></li>
-              <li><a class="dropdown-item" href="#">Form William</a></li>
+              <li><a class="dropdown-item" href="/pages/William.html">Form William</a></li>
               <li><a class="dropdown-item" href="#">Form Yesenia</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
