--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
               <li><a class="dropdown-item" href="#">Form Margarita</a></li>
               <li><a class="dropdown-item" href="#">Form William</a></li>
               <li><a class="dropdown-item" href="#">Form Yesenia</a></li>
+              <li><a class="dropdown-item" href="./pages/angela.html">Form Angela</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
