--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <li><a class="dropdown-item" href="./pages/dayana.html">Form Dayana</a></li>
               <li><a class="dropdown-item" href="#">Form Alex</a></li>
               <li><a class="dropdown-item" href="#">Form Laura</a></li>
-              <li><a class="dropdown-item" href="#">Form Margarita</a></li>
+              <li><a class="dropdown-item" href="./pages/marga.html">Form Margarita</a></li>
               <li><a class="dropdown-item" href="#">Form William</a></li>
               <li><a class="dropdown-item" href="#">Form Yesenia</a></li>
               <li><hr class="dropdown-divider"></li>
